<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/action_home"
            android:icon="@drawable/ic_home"
            android:title="@string/site_menu_home" />

        <item
            android:id="@+id/action_categories"
            android:icon="@drawable/ic_categories"
            android:title="@string/site_menu_category_list" />

        <item
            android:id="@+id/action_book"
            android:icon="@drawable/ic_book"
            android:title="@string/site_menu_book" />

        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/action_about_dev"
            android:icon="@drawable/ic_developer"
            android:title="@string/about_dev" />

    </group>

    <item android:title="@string/social">
        <menu>
            <item
                android:id="@+id/action_youtube"
                android:icon="@drawable/ic_youtube"
                android:title="@string/youtube" />

            <item
                android:id="@+id/action_facebook"
                android:icon="@drawable/ic_facebook"
                android:title="@string/facebook" />

            <item
                android:id="@+id/action_twitter"
                android:icon="@drawable/ic_twitter"
                android:title="@string/twitter" />

            <item
                android:id="@+id/action_instagram"
                android:icon="@drawable/ic_instagram"
                android:title="@string/instagram" />
        </menu>
    </item>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/privacy_policy"
                android:icon="@drawable/ic_privacy_policy"
                android:title="@string/privacy" />

            <item
                android:id="@+id/action_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />

            <item
                android:id="@+id/action_rate_app"
                android:icon="@drawable/ic_rating"
                android:title="@string/rate" />

            <item
                android:id="@+id/action_more_app"
                android:icon="@drawable/ic_bag"
                android:title="@string/more_app" />

            <item
                android:id="@+id/action_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>
