<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menus_read_article"
        android:title="@string/site_menu_read_article"
        app:showAsAction="never" />
    <item
        android:id="@+id/menus_share_post"
        android:title="@string/site_menu_share_post"
        app:showAsAction="never" />
    <item
        android:id="@+id/menus_copy_text"
        android:title="@string/site_menu_copy_text"
        app:showAsAction="never" />
    <item
        android:id="@+id/menus_download_image"
        android:title="@string/site_menu_download"
        app:showAsAction="never" />
    <item
        android:id="@+id/menus_set_image"
        android:title="@string/site_menu_set"
        app:showAsAction="never" />

</menu>