<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbarTop"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarTop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin_15dp">

            <ImageView
                android:layout_width="350dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_dev"
                android:contentDescription="@string/about_dev" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/developer_detail"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_15dp"
                android:layout_marginTop="@dimen/margin_15dp"
                android:gravity="center"
                android:text="@string/developer_message"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/developer_nameserpong"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/developer_serpong"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="normal|italic"
                android:text="@string/developer_emailserpong"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/developer_namethamrin"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/developer_thamrin"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="normal|italic"
                android:text="@string/developer_emailthamrin"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_80dp"
                android:gravity="right"
                android:text="@string/developer_name"
                android:textColor="@color/black"
                android:textSize="10sp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
