<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/default_background"
        android:padding="@dimen/margin_15dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="@string/exit" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="@color/toolbar_boarder" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_15dp">

            <LinearLayout
                android:id="@+id/lyt_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/margin_20dp"
                    android:layout_height="@dimen/margin_20dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_user" />

                <EditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_15dp"
                    android:fontFamily="@font/libre_franklin"
                    android:hint="@string/user_name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyt_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lyt_first"
                android:layout_marginBottom="@dimen/margin_10dp">

                <ImageView
                    android:layout_width="@dimen/margin_20dp"
                    android:layout_height="@dimen/margin_20dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_email" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_15dp"
                    android:fontFamily="@font/libre_franklin"
                    android:hint="@string/user_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lyt_second"
                android:layout_marginBottom="@dimen/margin_10dp">

                <ImageView
                    android:layout_width="@dimen/margin_20dp"
                    android:layout_height="@dimen/margin_20dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_reply" />

                <EditText
                    android:id="@+id/edt_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_15dp"
                    android:fontFamily="@font/libre_franklin"
                    android:hint="@string/user_comment"
                    android:inputType=""
                    android:minLines="3"
                    android:textColor="@color/black" />
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>
</LinearLayout>
