<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_300dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/post_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@color/white"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:theme="@style/ToolBarStyle" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/lyt_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/lyt_secondary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:visibility="gone">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="@color/toolbar_boarder" />

            <TextView
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_17dp"
                android:layout_marginStart="@dimen/margin_17dp"
                android:layout_marginTop="@dimen/margin_30dp"
                android:fontFamily="@font/merriweather"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="italic"
                tools:text="@string/app_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_17dp"
                android:layout_marginStart="@dimen/margin_17dp"
                android:layout_marginTop="@dimen/margin_15dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/img_date"
                        android:layout_width="@dimen/margin_20dp"
                        android:layout_height="@dimen/margin_20dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_calendar" />

                    <TextView
                        android:id="@+id/date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/margin_6dp"
                        android:layout_toEndOf="@+id/img_date"
                        android:fontFamily="@font/libre_franklin"
                        android:textColor="@color/black"
                        tools:text="12-02-2018" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/lyt_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_20dp"
                    android:background="?android:attr/selectableItemBackground">

                    <ImageView
                        android:id="@+id/img_comment"
                        android:layout_width="@dimen/margin_20dp"
                        android:layout_height="@dimen/margin_20dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_comment" />

                    <TextView
                        android:id="@+id/comment_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/margin_6dp"
                        android:layout_toEndOf="@+id/img_comment"
                        android:fontFamily="@font/libre_franklin"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        tools:text="3" />

                </RelativeLayout>

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_margin="@dimen/margin_17dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:background="@color/colorAccent21" />

            <WebView
                android:id="@+id/web_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_17dp"
                android:layout_marginStart="@dimen/margin_17dp" />

            <TextView
                android:id="@+id/tv_related"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_17dp"
                android:layout_marginTop="@dimen/margin_6dp"
                android:text="@string/related_posts"
                android:textColor="@color/blue"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRelated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_17dp"
                android:layout_marginStart="@dimen/margin_17dp"
                android:nestedScrollingEnabled="false"
                tools:targetApi="lollipop" />

            <LinearLayout
                android:id="@+id/lyt_third"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_100dp"
                android:layout_marginEnd="@dimen/margin_10dp"
                android:layout_marginStart="@dimen/margin_14dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="1">

                <Button
                    android:id="@+id/btn_view_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_35dp"
                    android:layout_margin="@dimen/margin_3dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/rectangle_blue"
                    android:text="@string/view_comments"
                    android:textColor="@color/white"
                    android:textSize="10sp" />


                <Button
                    android:id="@+id/btn_write_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_35dp"
                    android:layout_margin="@dimen/margin_3dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/rectangle_blue"
                    android:text="@string/write_a_comment"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/share_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_15dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end"
        tools:src="@drawable/ic_book" />

    <include
        android:id="@+id/adsView"
        layout="@layout/content_banner_ad" />

    <include layout="@layout/view_common_loader" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>